--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "pod": "cd ./ios && pod"
+    "pod": "cd ./ios && pod",
+    "storybook:custom": "watch rnstl ./src --wait=100 | start-storybook | yarn run start --projectRoot storybook --watchFolders $PWD",
+    "android-storybook": "yarn run android && yarn run adb-reverse",
+    "storybook": "start-storybook -p 7007",
+    "prestorybook": "rnstl",
+    "adb-reverse": "adb reverse tcp:7007 tcp:7007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -30,19 +36,38 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.25",
+    "@storybook/react-native": "^5.3.25",
+    "@storybook/react-native-server": "^5.3.23",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.3",
     "@types/react-native": "^0.63.52",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-dom": "17.0.1",
+    "react-native-storybook-loader": "^2.0.2",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.1",
     "typescript": "^4.2.3"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./src"
+      ],
+      "pattern": "**/*.stories.tsx",
+      "outputFile": "./storybook/storyLoader.js"
+    }
   }
 }
