--- a/ios/DoctorApp/Info.plist
+++ b/ios/DoctorApp/Info.plist
@@ -51,5 +51,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>doctor-font.ttf</string>
+	</array>
 </dict>
 </plist>
