--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@types/react-native-vector-icons": "^6.4.6",
     "i18next": "^20.0.0",
     "react": "17.0.1",
     "react-i18next": "^11.8.10",
@@ -30,7 +31,8 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
