--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios  --simulator='iPhone 11'",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
+    "lint": "tsc --skipLibCheck && eslint .",
     "pod": "cd ./ios && pod",
     "storybook:custom": "watch rnstl ./src --wait=100 | start-storybook | yarn run start --projectRoot storybook --watchFolders $PWD",
     "android-storybook": "yarn run android && yarn run adb-reverse",
