--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@types/react-native-vector-icons": "^6.4.6",
+    "date-fns": "^2.21.3",
     "i18next": "^20.2.1",
     "react": "17.0.1",
     "react-i18next": "^11.8.13",
