--- a/ios/Hakeemi.xcodeproj/xcshareddata/xcschemes/Hakeemi.xcscheme
+++ b/ios/Hakeemi.xcodeproj/xcshareddata/xcschemes/Hakeemi.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "DoctorApp.app"
-               BlueprintName = "DoctorApp"
-               ReferencedContainer = "container:DoctorApp.xcodeproj">
+               BuildableName = "Hakeemi.app"
+               BlueprintName = "Hakeemi"
+               ReferencedContainer = "container:Hakeemi.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "DoctorAppTests.xctest"
-               BlueprintName = "DoctorAppTests"
-               ReferencedContainer = "container:DoctorApp.xcodeproj">
+               BuildableName = "HakeemiTests.xctest"
+               BlueprintName = "HakeemiTests"
+               ReferencedContainer = "container:Hakeemi.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DoctorApp.app"
-            BlueprintName = "DoctorApp"
-            ReferencedContainer = "container:DoctorApp.xcodeproj">
+            BuildableName = "Hakeemi.app"
+            BlueprintName = "Hakeemi"
+            ReferencedContainer = "container:Hakeemi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DoctorApp.app"
-            BlueprintName = "DoctorApp"
-            ReferencedContainer = "container:DoctorApp.xcodeproj">
+            BuildableName = "Hakeemi.app"
+            BlueprintName = "Hakeemi"
+            ReferencedContainer = "container:Hakeemi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
