--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-version-info": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
