Add snackbar message package

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-version-info": "^1.1.0"
